include(statesTaskLib)
ADD_LIBRARY(${STATES_TASKLIB_NAME} SHARED 
    ${STATES_TASKLIB_SOURCES})

add_dependencies(${STATES_TASKLIB_NAME}
    regen-toolkit)


TARGET_LINK_LIBRARIES(${STATES_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${STATES_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${STATES_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${STATES_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${STATES_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${STATES_TASKLIB_HEADERS}
    DESTINATION include/orocos/states)

